# LILA-Games

./: .gitignore  README.md
player_data_2/: .gitignore  ARCHITECTURE.md  INSIGHTS.md  README.md  app.py  pyproject.toml  requirements.txt  viewer.py
player_data_2/.github/workflows/: python-app.yml
player_data_2/.streamlit/: config.toml
player_data_2/data/processed/: index.json
player_data_2/data/processed/heatmaps/: AmbroseValley_heatmaps.json  GrandRift_heatmaps.json  Lockdown_heatmaps.json
player_data_2/data/processed/matches/: 00b34c64-8746-44aa-b527-72ac0d971251.nakama-0.json  00c95178-f9c3-4007-aa30-2363a0bfa965.nakama-0.json  01464ac0-5b9c-47f2-b12a-50d5948a4ac2.nakama-0.json  015365c2-45fe-4ab2-851e-ac3a2b506578.nakama-0.json  016339a3-35af-4d81-b49c-bc8371ac2b30.nakama-0.json  01640e35-52ed-4f7a-8887-3ddb09def505.nakama-0.json  018ce847-fe23-405e-a6c0-48ba53766681.nakama-0.json  019dbb49-20ac-465f-8c16-7de72a0592fd.nakama-0.json  01d30b66-f767-4ccf-acf1-e0ee2ac4b58c.nakama-0.json  025b18ae-eb93-4df8-99ec-f04d06305c15.nakama-0.json  0273e16e-9ae9-410b-a22f-04451a416a0d.nakama-0.json  0289dd70-6c0d-4ab8-9db2-643a5964fa99.nakama-0.json  03359228-efd3-43cb-9145-867603ea799b.nakama-0.json  035e26ca-cf85-400c-aa49-e239571d5534.nakama-0.json  039d0edf-6a9f-4dee-9d90-b2f1f8c70efa.nakama-0.json  (+781 more)
player_data_2/docs/: README.md
player_data_2/notebooks/: data_exploration.ipynb  data_exploration_executed.ipynb  data_exploration_test.ipynb
player_data_2/scripts/: analyze_notebook.py  data_explorer.py  process_data.py  read_parquet.py
